ui: spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
     box-shadow: 0px 10px 23px 0px rgba(67, 67, 67, 0.1);
 }
 
+.shadow-light {
+    box-shadow: 0px 38.78px 77.55px 0px #3754FF1A;
+}
+
 .gradient-shadow {
     box-shadow: 0px 20px 40px linear-gradient(265.03deg, #8D44D7 8.2%, #2335A3 76.67%);
 }
